// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StaticDataTableCell component StaticDataTableCell renders with amount 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <span
              autocomplete="off"
              class="default readOnly table--cell-value--amount-readonly"
              id="amount"
              name="amount"
            >
              1
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with amount and data test id 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <span
              autocomplete="off"
              class="default readOnly table--cell-value--amount-readonly"
              id="amount"
              name="amount"
            >
              1
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with badge 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <span
            class="default secondary table--cell--value--badge-no-margin"
          >
            Badge
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with button 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="table--cell--value--button"
          >
            <button
              class="button"
              color="reversed"
              tabindex="0"
              type="button"
            >
              <div
                class="icon"
              >
                <i
                  class="icon"
                  icon="fal,gear"
                />
              </div>
            </button>
            <div>
              label
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with checkbox 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--checkbox"
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <label
                class="label readOnly checked"
                for="checkbox-1"
                tabindex="-1"
              >
                <div
                  aria-checked="true"
                  aria-label="label"
                  class="checkboxMarker checked readOnly"
                  id="checkbox-1"
                  role="checkbox"
                >
                  <i
                    class="icon"
                    icon="fas,square-check"
                  />
                </div>
                label
              </label>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with code 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--code"
        >
          <div
            class="fieldGroup"
          >
            <span
              class="typography"
            >
              code
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with custom 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <span
            class="typography"
          >
            {"input":"custom","readOnly":true}
          </span>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with date 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container input-date-picker-wrapper-read-only table--cell-value--date-readonly"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-date-picker-input-read-only"
                    name="date"
                    placeholder="MMM DD, YYYY"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value="Apr 22, 2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with description 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--code"
        >
          Description
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with dynamicsearch 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
              data-testid="DATA-TEST-ID-Dynamic search-0"
            >
              <span
                class="typography"
              >
                label
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with file 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--code"
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <div
                class="droparea readonly"
              >
                <label
                  class="label"
                >
                  Click or drag file to upload
                  <input
                    accept="*/*"
                    multiple=""
                    readonly=""
                    tabindex="-1"
                    type="file"
                    value=""
                  />
                </label>
              </div>
              <div
                class="gallery"
              >
                <div
                  class="container error"
                >
                  <div
                    class="left"
                  >
                    <div
                      class="paperclipIcon"
                    >
                      <i
                        class="icon"
                        icon="fal,exclamation-triangle"
                      />
                    </div>
                    <div
                      class="name"
                      tabindex="-1"
                    >
                      filename.png
                       (1.21 kB)
                    </div>
                  </div>
                  <div
                    class="right"
                  />
                </div>
                <div>
                  Error message
                </div>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with multiselect 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <span
                class="typography"
              >
                Label 1
              </span>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with number 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <span
              autocomplete="off"
              class="default readOnly table--cell-value--number-readonly"
              id="number"
              name="number"
            >
              1
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with percentage 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <span
              autocomplete="off"
              class="default readOnly table--cell-value--percentage-readonly"
              id="percentage"
              name="percentage"
            >
              100 %
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with section 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          section
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with switch 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class="table--cell--checkbox"
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <label
                class="label readOnly"
                for="switch-2"
                tabindex="-1"
              >
                <div
                  class="switch"
                >
                  <input
                    aria-hidden="true"
                    checked=""
                    readonly=""
                    type="checkbox"
                  />
                  <span
                    aria-checked="true"
                    aria-label="Label"
                    class="silver"
                    id="switch-2"
                    role="checkbox"
                  />
                </div>
                Label
              </label>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with table 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <table
            class="gds-table"
          >
            <thead>
              <tr>
                <th
                  class=""
                >
                  <div
                    class="table--header-value"
                    tabindex="-1"
                  >
                    <span
                      class="typography table--header-value--title right ellipsis"
                      title="Number"
                    >
                      Number
                    </span>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody>
              <tr
                class=""
                tabindex="-1"
              >
                <td
                  class=""
                >
                  <div
                    class="fieldGroup"
                  >
                    <span
                      autocomplete="off"
                      class="default readOnly table--cell-value--number-readonly"
                      id="number"
                      name="number"
                    >
                      1
                    </span>
                  </div>
                </td>
              </tr>
              <tr
                class=""
                tabindex="-1"
              >
                <td
                  class=""
                >
                  <div
                    class="fieldGroup"
                  >
                    <span
                      autocomplete="off"
                      class="default readOnly table--cell-value--number-readonly"
                      id="number"
                      name="number"
                    >
                      2
                    </span>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with text 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <span
              class="typography"
            >
              text
            </span>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with textarea 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container"
            >
              <textarea
                autocomplete="off"
                autocorrect="off"
                class="textarea readOnly"
                id="textarea"
                name="textarea"
                readonly=""
              >
                textarea
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`StaticDataTableCell component StaticDataTableCell renders with year 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="fieldGroup"
          >
            <div
              class="container input-year-picker-wrapper-read-only table--cell-value--date-readonly"
            >
              <div
                class="react-datepicker-wrapper"
              >
                <div
                  class="react-datepicker__input-container "
                >
                  <span
                    aria-live="polite"
                    class="react-datepicker__aria-live"
                    role="alert"
                  />
                  <input
                    autocomplete="off"
                    class="input-year-picker-input-read-only"
                    name="year"
                    placeholder="YYYY"
                    readonly=""
                    tabindex="-1"
                    type="text"
                    value="2022"
                  />
                </div>
              </div>
              <div />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
